#
# Autobuilt files
#

libconfig = configure_file(output: 'libconfig.h', configuration: conf_data)

libarkimet_sources = [
    libconfig,
    'core/time.cc',
    'core/fuzzytime.cc',
    'core/file.cc',
    'core/cfg.cc',
    'core/binary.cc',
    'core/transaction.cc',
    'core/curl.cc',
    'stream.cc',
    'stream/filter.cc',
    'stream/base.cc',
    'stream/abstract.cc',
    'stream/concrete.cc',
    'stream/discard.cc',
    'stream/buffer.cc',
    'exceptions.cc',
    'nag.cc',
    'utils/accounting.cc',
    'utils/geos.cc',
    'utils/gzip.cc',
    'utils/files.cc',
    'utils/regexp.cc',
    'utils/string.cc',
    'utils/sys.cc',
    'utils/subprocess.cc',
    'utils/yaml.cc',
    'utils/tar.cc',
    'utils/zip.cc',
    'utils/term.cc',
    'structured/emitter.cc',
    'structured/keys.cc',
    'structured/reader.cc',
    'structured/memory.cc',
    'structured/json.cc',
    'bbox.cc',
    'types.cc',
    'types/bundle.cc',
    'types/utils.cc',
    'types/encoded.cc',
    'types/values.cc',
    'types/source.cc',
    'types/source/blob.cc',
    'types/source/inline.cc',
    'types/source/url.cc',
    'types/reftime.cc',
    'types/origin.cc',
    'types/product.cc',
    'types/level.cc',
    'types/timerange.cc',
    'types/area.cc',
    'types/proddef.cc',
    'types/note.cc',
    'types/assigneddataset.cc',
    'types/bbox.cc',
    'types/run.cc',
    'types/task.cc',
    'types/quantity.cc',
    'types/value.cc',
    'types/typevector.cc',
    'types/typeset.cc',
    'types/itemset.cc',
    'matcher.cc',
    'matcher/aliases.cc',
    'matcher/parser.cc',
    'matcher/utils.cc',
    'matcher/origin.cc',
    'matcher/product.cc',
    'matcher/level.cc',
    'matcher/timerange.cc',
    'matcher/reftime.cc',
    'matcher/area.cc',
    'matcher/proddef.cc',
    'matcher/run.cc',
    'matcher/task.cc',
    'matcher/quantity.cc',
    'types-init.cc',
    'utils/compress.cc',
    'utils/sqlite.cc',
    'metadata.cc',
    'metadata/sort.cc',
    'metadata/data.cc',
    'metadata/collection.cc',
    'metadata/stream.cc',
    'metadata/clusterer.cc',
    'metadata/archive.cc',
    'metadata/validator.cc',
    'metadata/postprocess.cc',
    'metadata/test-generator.cc',
    'summary/stats.cc',
    'summary/intern.cc',
    'summary/table.cc',
    'summary/codec.cc',
    'summary/short.cc',
    'summary.cc',
    'segment.cc',
    'segment/defs.cc',
    'segment/session.cc',
    'segment/data.cc',
    'segment/data/common.cc',
    'segment/data/missing.cc',
    'segment/data/fd.cc',
    'segment/data/dir.cc',
    'segment/data/tar.cc',
    'segment/data/zip.cc',
    'segment/data/gz.cc',
    'segment/data/seqfile.cc',
    'segment/index/iseg.cc',
    'segment/index/iseg/base.cc',
    'segment/index/iseg/attr.cc',
    'segment/index/iseg/aggregate.cc',
    'formatter.cc',
    'scan.cc',
    'scan/validator.cc',
    'scan/mock.cc',
    'scan/odimh5.cc',
    'scan/netcdf.cc',
    'scan/jpeg.cc',
    'metadata/xargs.cc',
    'query.cc',
    'query/progress.cc',
    'dataset.cc',
    'dataset/lock.cc',
    'dataset/reporter.cc',
    'dataset/time.cc',
    'dataset/session.cc',
    'dataset/maintenance.cc',
    'dataset/memory.cc',
    'dataset/index.cc',
    'dataset/index/manifest.cc',
    'dataset/index/summarycache.cc',
    'dataset/step.cc',
    'dataset/local.cc',
    'dataset/segmented.cc',
    'dataset/file.cc',
    'dataset/archive.cc',
    'dataset/simple.cc',
    'dataset/simple/reader.cc',
    'dataset/simple/writer.cc',
    'dataset/simple/checker.cc',
    'dataset/iseg.cc',
    'dataset/iseg/reader.cc',
    'dataset/iseg/writer.cc',
    'dataset/iseg/checker.cc',
    'dataset/ondisk2.cc',
    'dataset/outbound.cc',
    'dataset/offline.cc',
    'dataset/empty.cc',
    'dataset/fromfunction.cc',
    'dataset/testlarge.cc',
    'dataset/merged.cc',
    'dataset/querymacro.cc',
    'dataset/pool.cc',
    'dispatcher.cc',
    'runtime.cc',
    'iotrace.cc',
]

subdir('matcher/reftime')

if eccodes_dep.found()
    libarkimet_sources += ['scan/grib.cc']
endif

if dballe_dep.found()
    libarkimet_sources += ['scan/bufr.cc']
endif

if meteo_vm2_dep.found()
    libarkimet_sources += ['utils/vm2.cc', 'scan/vm2.cc']
endif

if libcurl_dep.found()
    libarkimet_sources += ['dataset/http.cc']
endif

libarkimet = both_libraries('arkimet',
        libarkimet_sources,
        install: true,
        include_directories: toplevel_inc,
        cpp_pch: 'pch/arkimet_pch.h',
        dependencies: [
                thread_dep,
                geos_dep,
                lua_dep,
                lzo_dep,
                eccodes_dep,
                dballe_dep,
                meteo_vm2_dep,
                libarchive_dep,
                libzip_dep,
                zlib_dep,
                libcurl_dep,
                sqlite3_dep,
                libssl_dep,
                libcrypto_dep,
        ])


#
# Unit testing
#

test_arkimet_sources = [
    'tests/main.cpp',
    'tests/daemon.cc',
    'tests/tests.cc',
    'core/tests.cc',
    'types/tests.cc',
    'utils/tests.cc',
    'utils/testrunner.cc',
    'tests/tests-test.cc',
    'core/time-test.cc',
    'core/fuzzytime-test.cc',
    'core/file-test.cc',
    'core/cfg-test.cc',
    'core/binary-test.cc',
    'core/transaction-test.cc',
    'core/curl-test.cc',
    'stream-test.cc',
    'stream/base-test.cc',
    'stream/filter-test.cc',
    'stream/abstract-test.cc',
    'stream/concrete-test.cc',
    'stream/discard-test.cc',
    'stream/buffer-test.cc',
    'stream/tests.cc',
    'utils/accounting-test.cc',
    'utils/gzip-test.cc',
    'utils/yaml-test.cc',
    'utils/tar-test.cc',
    'utils/zip-test.cc',
    'utils/files-test.cc',
    'utils/regexp-test.cc',
    'utils/geos-test.cc',
    'structured/memory-test.cc',
    'structured/json-test.cc',
    'types-test.cc',
    'types/bundle-test.cc',
    'types/utils-test.cc',
    'types/encoded-test.cc',
    'types/values-test.cc',
    'types/source-test.cc',
    'types/reftime-test.cc',
    'types/origin-test.cc',
    'types/product-test.cc',
    'types/level-test.cc',
    'types/timerange-test.cc',
    'types/area-test.cc',
    'types/proddef-test.cc',
    'types/note-test.cc',
    'types/assigneddataset-test.cc',
    'types/bbox-test.cc',
    'types/run-test.cc',
    'types/task-test.cc',
    'types/quantity-test.cc',
    'types/value-test.cc',
    'types/typevector-test.cc',
    'types/typeset-test.cc',
    'types/itemset-test.cc',
    'metadata/tests.cc',
    'matcher/tests.cc',
    'utils/compress-test.cc',
    'utils/sqlite-test.cc',
    'formatter-test.cc',
    'bbox-test.cc',
    'metadata-test.cc',
    'metadata/sort-test.cc',
    'metadata/data-test.cc',
    'metadata/collection-test.cc',
    'metadata/clusterer-test.cc',
    'metadata/stream-test.cc',
    'metadata/archive-test.cc',
    'metadata/validator-test.cc',
    'metadata/test-generator-test.cc',
    'summary-test.cc',
    'summary/intern-test.cc',
    'summary/table-test.cc',
    'summary/stats-test.cc',
    'summary/short-test.cc',
    'matcher-test.cc',
    'matcher/aliases-test.cc',
    'matcher/parser-test.cc',
    'matcher/utils-test.cc',
    'matcher/origin-test.cc',
    'matcher/product-test.cc',
    'matcher/level-test.cc',
    'matcher/timerange-test.cc',
    'matcher/reftime-test.cc',
    'matcher/reftime/lexer-test.cc',
    'matcher/reftime/parser-test.cc',
    'matcher/area-test.cc',
    'matcher/proddef-test.cc',
    'matcher/run-test.cc',
    'matcher/task-test.cc',
    'matcher/quantity-test.cc',
    'scan-test.cc',
    'scan/validator-test.cc',
    'scan/mock-test.cc',
    'scan/odimh5-test.cc',
    'scan/netcdf-test.cc',
    'scan/jpeg-test.cc',
    'segment-test.cc',
    'segment/defs-test.cc',
    'segment/session-test.cc',
    'segment/data-test.cc',
    'segment/data/common-test.cc',
    'segment/data/missing-test.cc',
    'segment/data/fd-test.cc',
    'segment/data/seqfile-test.cc',
    'segment/data/dir-test.cc',
    'segment/data/tar-test.cc',
    'segment/data/zip-test.cc',
    'segment/data/gz-test.cc',
    'segment/data/tests.cc',
    'segment/index/iseg-test.cc',
    'segment/index/iseg/base-test.cc',
    'segment/index/iseg/attr-test.cc',
    'segment/index/iseg/aggregate-test.cc',
    'metadata/xargs-test.cc',
    'metadata/postprocess-test.cc',
    'query-test.cc',
    'query/progress-test.cc',
    'dataset/tests.cc',
    'dataset/lock-test.cc',
    'dataset/reporter-test.cc',
    'dataset/time-test.cc',
    'dataset/session-test.cc',
    'dataset/maintenance-test.cc',
    'dataset/memory-test.cc',
    'dataset/index-test.cc',
    'dataset/index/manifest-test.cc',
    'dataset/index/summarycache-test.cc',
    'dataset/step-test.cc',
    'dataset/local-test.cc',
    'dataset/segmented-test.cc',
    'dataset/file-test.cc',
    'dataset/archive-test.cc',
    'dataset/simple-test.cc',
    'dataset/simple/reader-test.cc',
    'dataset/simple/writer-test.cc',
    'dataset/simple/checker-test.cc',
    'dataset/simple/maintenance-test.cc',
    'dataset/iseg-test.cc',
    'dataset/iseg/reader-test.cc',
    'dataset/iseg/writer-test.cc',
    'dataset/iseg/checker-test.cc',
    'dataset/iseg/maintenance-test.cc',
    'dataset/ondisk2-test.cc',
    'dataset/outbound-test.cc',
    'dataset/offline-test.cc',
    'dataset/empty-test.cc',
    'dataset/fromfunction-test.cc',
    'dataset/testlarge-test.cc',
    'dataset/merged-test.cc',
    'dataset/querymacro-test.cc',
    'dataset/pool-test.cc',
    'dataset-test.cc',
    'dataset-reader-test.cc',
    'dataset-writer-test.cc',
    'dataset-checker-test.cc',
    'dataset-concurrency-test.cc',
    'dispatcher-test.cc',
    'runtime-test.cc',
    'iotrace-test.cc',
]

if eccodes_dep.found()
    test_arkimet_sources += ['scan/grib-test.cc']
endif

if dballe_dep.found()
    test_arkimet_sources += ['scan/bufr-test.cc']
endif

if meteo_vm2_dep.found()
    test_arkimet_sources += ['utils/vm2-test.cc', 'scan/vm2-test.cc']
endif

if libcurl_dep.found()
    test_arkimet_sources += ['dataset/http-test.cc']
endif

test_arkimet = executable('test-arkimet', test_arkimet_sources,
    include_directories: toplevel_inc,
    link_with: [
        libarkimet,
    ],
    cpp_pch: 'pch/arkimet_pch.h',
    dependencies: [
        sqlite3_dep,
        eccodes_dep,
        dballe_dep,
        meteo_vm2_dep,
        libcurl_dep,
    ]
)

runtest = find_program('runtest')

test('arki', runtest, args: [test_arkimet], timeout: 600)
