nobase_dist_conf_DATA = \
	bbox/README.md \
	format/README.md \
	match-alias.conf \
	qmacro/noop.py \
	qmacro/noopcopy.py \
	qmacro/expa.py \
	scan/grib1.py \
	scan/grib2.py \
	scan-grib1/01-common.lua \
	scan-grib2/01-common.lua \
	scan-odimh5/01-common.lua \
	vm2/source.lua

EXTRA_DIST = \
	     qmacro/test0.lua \
	     qmacro/noopcopy.lua
