nobase_dist_conf_DATA = \
	bbox/README.md \
	format/README.md \
	match-alias.conf \
	scan/bufr_fixed.py \
	scan/bufr_generic.py \
	scan/bufr_mobile.py \
	scan/bufr_pollution.py \
	scan/grib1.py \
	scan/grib2.py \
	scan/odimh5.py \
	qmacro/noop.py \
	qmacro/noopcopy.py \
	qmacro/expa.py \
	vm2/source.lua

EXTRA_DIST = \
	     qmacro/test0.lua \
	     qmacro/noopcopy.lua
