install_data('match-alias.conf', install_dir: conf_dir)
install_data('bbox/README.md', install_dir: conf_dir / 'bbox')
install_data('format/README.md', install_dir: conf_dir / 'format')
install_data(
	'scan/bufr_fixed.py',
	'scan/bufr_generic.py',
	'scan/bufr_mobile.py',
	'scan/bufr_pollution.py',
	'scan/grib1.py',
	'scan/grib2.py',
	'scan/nc.py',
	'scan/odimh5.py',
	'scan/jpeg.py',
    install_dir: conf_dir / 'scan')
install_data(
	'qmacro/noop.py',
	'qmacro/noopcopy.py',
	'qmacro/expa.py',
    install_dir: conf_dir / 'qmacro')
install_data('vm2/source.lua', install_dir: conf_dir / 'vm2')

install_data('match-alias.simc.conf', install_dir: doc_dir)
